fixing string ptbr issue

--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -48,7 +48,7 @@
     <string name="f_large">Largo</string>
     <string name="f_extra_large">Extra largo</string>
     <string name="title_settings">Configurações</string>
-    <string name="title_saved">Salvados</string>
+    <string name="title_saved">Salvos</string>
     <string name="title_base">Início</string>
     <string name="tab_top">Melhores</string>
     <string name="tab_business">Negócios</string>
